<resources>
    <string name="app_name">AppListaCurso</string>
    <string name="aplicativo_lista_vip_curso">Aplicativo Lista VIP Curso</string>
    <string name="finalizar">FINALIZAR</string>
    <string name="salvar">SALVAR</string>
    <string name="limpar">LIMPAR</string>
    <string name="telefone_de_contato">Telefone de Contato</string>
    <string name="nome_do_curso_desejado">Nome do Curso Desejado</string>
    <string name="sobrenome">SobreNome</string>
    <string name="primeiro_nome">Primeiro Nome</string>
    <string name="selecione_um_curso">Selecione um Curso</string>
</resources>