<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue"
    android:orientation="vertical"
    tools:context=".view.MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
    <TextView
        android:id="@+id/txtTitulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/aplicativo_lista_vip_curso"
        android:textStyle="bold"
        android:layout_marginTop="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:gravity="center_horizontal"
        android:textSize="24sp"
        android:background="@color/blue_transparent"
        android:padding="5dp"
        android:textColor="@color/white"
         />

    <EditText
        android:id="@+id/editPrimeiroNome"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:textColorHint="@color/white"
        android:ems="10"
        android:inputType="text"
        android:textColor="@color/white"
        android:hint="@string/primeiro_nome"
         />

    <EditText
        android:id="@+id/editSobreNome"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/sobrenome"
         />

    <EditText
        android:id="@+id/editCursoDesejado"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/nome_do_curso_desejado"
        />

    <EditText
        android:id="@+id/editTelContato"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:ems="10"
        android:hint="@string/telefone_de_contato"
        android:inputType="text"
        />

    <TextView
        android:id="@+id/txtListaSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@color/blue_transparent"
        android:gravity="center"
        android:padding="5dp"
        android:text="@string/selecione_um_curso"
        android:textColor="@color/white"
        android:textSize="20dp"
        android:textStyle="bold"
        />
    <Spinner
        android:id="@+id/spinner"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <Button
                    android:id="@+id/btnLimpar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:text="@string/limpar"
                    android:textColor="@color/white"
                    android:backgroundTint="@color/blue_transparent"
                    />

                <Button
                    android:id="@+id/btnSalvar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:backgroundTint="@color/blue_transparent"
                    android:text="@string/salvar"
                    android:textColor="@color/white"
                    />
            </LinearLayout>

    <Button
        android:id="@+id/btnFinalizar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="@color/blue_transparent"
        android:text="@string/finalizar"
        android:textColor="@color/white"
         />
        </LinearLayout>
    </ScrollView>

</LinearLayout>